deployment-dependency-base.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: md-inventory-svc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: md-inventory-svc
    spec:
      containers:
      - name: md-inventory-svc
        image: quay.io/jlgonzalez/monitoringday
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: app
      imagePullSecrets:
      - name: jlgonzalez-pull-secret
