service-dependency.yml
---
apiVersion: v1
kind: Service
metadata:
  name: md-inventory-svc
spec:
  selector:
        run: md-inventory-svc
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
